@@ -1,10 +1,16 @@
 package src.extra_api;
 
+import org.json.simple.JSONArray;
+import org.json.simple.JSONObject;
+import org.json.simple.parser.JSONParser;
+
 import java.io.BufferedReader;
 import java.io.FileReader;
-import java.net.URI;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.net.URLEncoder;
-import java.net.http.HttpHeaders;
+import java.util.HashMap;
 import java.util.Map;
 
 /*
@@ -19,11 +25,41 @@ public class KakaoLocalApi {
     String apiUrl = "https://dapi.kakao.com/v2/local/search/address.json"
                     + "?query=" + query;
 
-        URI uri = new URI(apiUrl);
+        URL url = new URL(apiUrl);
         // Header setting
-        HttpHeaders headers = new HttpHeaders();
+        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
+        conn.setRequestProperty("Authorization", "KakaoAK" + kakaokey);
 
+        // 응답결과 확인
+        int responseCode = conn.getResponseCode();
+        System.out.println(responseCode);
 
-        return null;
+        br = new BufferedReader(new InputStreamReader(conn.getInputStream(),"utf-8"));
+        StringBuffer sb = new StringBuffer();
+        String line = null;
+        while ((line = br.readLine()) != null)
+            sb.append(line);
+        br.close();
+//        System.out.println(sb.toString());
+
+        // JSON 데이터에서 원하는 값 추출
+        JSONParser parser = new JSONParser();
+        JSONObject object = (JSONObject) parser.parse(sb.toString());
+//        System.out.println(object.keySet());
+//        JSONObject documents = (JSONObject) object.get("documents");
+        JSONArray documents = (JSONArray) object.get("documents");
+        JSONObject item = (JSONObject) documents.get(0);
+//        System.out.println(documents.size());
+//        System.out.println(item.keySet());
+        String lon_ = (String) item.get("x");
+        String lat_ = (String) item.get("y");
+//        System.out.println(lon_ + ", " + lat_ );
+
+        Map<String,Double> map = new HashMap<String,Double>();
+        map.put("lon",Double.parseDouble(lon_));
+        map.put("lat",Double.parseDouble(lat_));
+        return map;
+
+//        return null;
     }
 }
